--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,14 @@ name = "onlyoomfs"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "onlyoomfs"
+
+crate-type = ["cdylib"]
 [dependencies]
+gloo-net = "0.6.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+wasm-bindgen = "0.2.100"
+yew = { version = "0.21.0", features = ["csr"] }
+
